# inf1771-busca-local

./: .editorconfig  .gitignore  AUTHORS  COPYING  MAPA_LENDA-AANG.txt  Makefile.am  Makefile.in  README.md  TODO.md  aclocal.m4  autogen.sh  build.sh  config.h.in  configure  configure.ac  flake.nix
src/: Makefile.am  Makefile.in  array.c  array.h  asearch  asearch.c  astar  astar.c  astar.h  genetic.c  genetic.h  heap.c  heap.h  main.c  map.c  map.h  map_symbols.h  random_utils.c  random_utils.h  sdl2_app.c  sdl2_app.h  settings.c  settings.h
src/font/: vcr_osd_mono.h
